prevent overflow-wrap of connect wallet text

--- a/src/pages/Pools.module.scss
+++ b/src/pages/Pools.module.scss
@@ -11,6 +11,9 @@ div.poolsPage {
     width: max-content;
     margin: 24px auto;
     display: flex;
+    @include breakpoint(sm) {
+      padding-left: 0px;
+    }
   }
 
   .filterTab {
